kubernetes/proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: docs
  name: proxy
  labels:
    app: docs
    component: proxy
spec:
  ports:
    - port: 8000
      targetPort: http
  selector:
    app: docs
    component: proxy
