kubernetes/proxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  namespace: docs
  labels:
    app: docs
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: docs-g8s.giantswarm.io
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8000
        path: /
  - host: docs.giantswarm.io
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - docs-g8s.giantswarm.io
    - docs.giantswarm.io
